8269897: Shenandoah: Treat UNKNOWN refs access as strong